--- a/Gradient Border Button/index.html
+++ b/Gradient Border Button/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+    <h1>This is a gradient border button</h1>
     <button>Gradient Button</button>
     
 </body>
